[workspace]
resolver = "3"
members = [
    "common",
    "simulation_service",
    "telemetry_service",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
tungstenite = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3.31"
async-trait = "0.1"
futures = "0.3.31"